k8s/manifests/base/apps/error-pages/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: streamlit-fallback
spec:
  errors:
    status:
      - "404"
      - "500-503"
    service:
      name: error-page
      port: 80
    query: "/"
