k8s/manifests/base/apps/error-pages/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-page
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: error-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-page
  template:
    metadata:
      labels:
        app: error-page
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:alpine
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
          resources:
            requests:
              cpu: "6m"
              memory: "20Mi"
            limits:
              cpu: "25m"
              memory: "50Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: tmp-volume
              mountPath: /tmp
            - name: run-volume
              mountPath: /var/run
            - name: cache-volume
              mountPath: /var/cache/nginx
      volumes:
        - name: config-volume
          configMap:
            name: error-page-content
        # Map those mounts to empty, transient directories
        - name: tmp-volume
          emptyDir: {}
        - name: run-volume
          emptyDir: {}
        - name: cache-volume
          emptyDir: {}
